Fixed Button Layout Issue

--- a/scss/elements/button.scss
+++ b/scss/elements/button.scss
@@ -16,9 +16,6 @@
   transition: $primary-transition;
   text-align: center;
 
-  height: min-content;
-  width: min-content;
-
 
   // Important
   &.zust-icon-button {
@@ -205,9 +202,6 @@
     cursor: pointer;
     transition: $primary-transition;
     text-align: center;
-
-    height: min-content;
-    width: min-content;
 
     &:hover, &.zust-hovered {
       border-color: var(--button-hover-border-color);
